--- a/notes/notes_topics/notes_pages/collection_collation_and_analysis_to_make_decisions_notes.html
+++ b/notes/notes_topics/notes_pages/collection_collation_and_analysis_to_make_decisions_notes.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <h3><b><u>Marketing:</b></u></h3>
-                <h3><b>Marketing Analysis:</b></h3>
+                <h3 id="MarketingAnalysis"><b>Marketing Analysis:</b></h3>
                 <h3>Used to analyse the market to examine the potential they are operating 
                     in</h3>
                 <h3><ul>
@@ -97,12 +97,12 @@
                         <li>Looks at available market</li>
                         <li>Used to predict the expansion of the workforce</li>
                     </ul></h3>
-                <h3><b>SWOT:</b></h3>
+                <h3 id="SWOTAnalysis"><b>SWOT:</b></h3>
                 <h3>Strengths, Weaknesses, Opportunities, Threats.</h3>
                 <h3>This is the frame of how companies analyse how they are effecting the 
                     market.
                 </h3>
-                <h3><b>Research techniques:</b></h3>
+                <h3 id="ResearchTechniques"><b>Research techniques:</b></h3>
                 <h3>Key characteristics of customers include:</h3>
                 <h3><ul>
                         <li>Age</li>
@@ -122,13 +122,13 @@
                         <li>Brand preferences</li>
                 </ul></h3>
 
-                <h3><b>Primary data:</b></h3>
+                <h3 id="PrimaryData"><b>Primary data:</b></h3>
                 <h3>New data, gathered by the researcher (interviews, focus groups, case 
                     studies)</h3>
-                <h3><b>Secondary data:</b></h3>
+                <h3 id="SecondaryData"><b>Secondary data:</b></h3>
                 <h3>Is gathered as part of research or reporting on primary data (articles, 
                     books, magazines)</h3>
-                <h3><b>Focus group:</b></h3>
+                <h3 id="FocusGroup"><b>Focus group:</b></h3>
                 <h3>Is a marketing research tool in which a small group of people (typically 
                     eight to ten individuals) engages in a discussion of selected topics of 
                     interest in an informal setting. (e.g. a product)</h3>    
@@ -136,7 +136,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Investigative methods:</b></u></h3>
+                <h3 id="InvestigativeMethods"><b><u>Investigative methods:</b></u></h3>
                 <h3><b>Immersion:</b></h3>
                 <h3>Designers putting themselves into the environment or situation that the 
                     customer is in. (e.g. pregnancy suit)- enables designers to gain a real 
@@ -151,18 +151,18 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Innovation management:</b></u></h3>
-                <h3><b>Imitation:</b></h3>
+                <h3 id="InnovationManagement"><b><u>Innovation management:</b></u></h3>
+                <h3 id="Imitation"><b>Imitation:</b></h3>
                 <h3>The action of using someone or something as a model</h3>
-                <h3><b>Invention:</b></h3>
+                <h3 id="Invention"><b>Invention:</b></h3>
                 <h3>The action of inventing something, typically a process or device</h3>
-                <h3><b>Push innovation:</b></h3>
+                <h3 id="PushInnovation"><b>Push innovation:</b></h3>
                 <h3>Uses existing technologies/processes that have been recently 
                     developed</h3>
-                <h3><b>Pull innovation:</b></h3>
+                <h3 id="PullInnovation"><b>Pull innovation:</b></h3>
                 <h3>Driven approach that may lead to new technologies/products being 
                     developed</h3>
-                <h3><b>Cooperation between sectors:</b></h3>
+                <h3 id="CooperationBetweenSectors"><b>Cooperation between sectors:</b></h3>
                 <h3>All employees must be able to work together for innovation 
                     management</h3>
                 <h3><ul>
@@ -173,7 +173,7 @@
                         <li>Meetings</li>
                         <li>Six sigma</li>
                     </ul></h3>
-                <h3><b>Encouragement of creativity:</b></h3>
+                <h3 id="EncouragementOfCreativity"><b>Encouragement of creativity:</b></h3>
                 <h3><ul>
                         <li>Different genders</li>
                         <li>Different cultural genders</li>
@@ -182,7 +182,7 @@
                         <li>Understanding</li>
                         <li>Thinking</li>
                     </ul></h3>
-                <h3><b>Concurrent manufacturing and QRM:</b></h3>
+                <h3 id="ConcurrentManufacturingAndQRM"><b>Concurrent manufacturing and QRM:</b></h3>
                 <h3><ul>
                         <li>Companywide strategy to cut lead times</li>
                         <li>Responds to demand not producing in advance of orders</li>
@@ -200,7 +200,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                <h3><b><u>Feasibility and practicality:</b></u></h3>
+                <h3 id="FeasibilityAndPracticality"><b><u>Feasibility and practicality:</b></u></h3>
                 <h3><ul>
                     <li>Analyse and justify manufacturing the design chosen</li>
                     <li>Consider technical aspects of the design</li>
@@ -223,7 +223,7 @@
                         <li>Software</li>
                         <li>Waste disposal</li>
                     </ul></h3> 
-                <h3><b>Computer modelling in production planning:</b></h3>
+                <h3 id="ComputerModellingInProductionPlanning"><b>Computer modelling in production planning:</b></h3>
                 <h3>Used for:</h3>
                 <h3><ul>
                         <li>Assessing practicality</li>
