--- a/notes/notes_topics/notes_pages/consumer_rights_notes.html
+++ b/notes/notes_topics/notes_pages/consumer_rights_notes.html
@@ -87,7 +87,7 @@
                 <div class="notes-content-intro">
                 </div>
 
-                <h3><b><u>Consumer rights act (2015):</b></u></h3>
+                <h3 id="consumerrightsact"><b><u>Consumer rights act (2015):</b></u></h3>
                 <h3><ul>
                         <li> Designed to ensure that all products must be of a satisfactory 
                             quality, that they are fit for purpose and as described by the 
@@ -107,7 +107,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Sale of goods act (1979):</b></u></h3>
+                    <h3 id="Saleofgoodsact"><b><u>Sale of goods act (1979):</b></u></h3>
                     <h3><ul>
                         <li>This has largely been replaced by the Consumer Rights Act 
                             (2015), however it still applies to any goods bought before 2015</li>
