--- a/notes/notes_topics/notes_pages/health_and_safety_laws_notes.html
+++ b/notes/notes_topics/notes_pages/health_and_safety_laws_notes.html
@@ -94,7 +94,7 @@
                 </div>
 
                     <div class="notes-content-subheader">
-                        <h2><hr>Health and safety regulation<hr></h2>
+                        <h2 id="HSEregs"><hr>Health and safety regulation<hr></h2>
                     </div>
 
                 <h3><b>The health and safety executive and an awareness of relevant regulations to manufacturing industries:</b>
@@ -124,7 +124,7 @@
 
     
                     <div class="notes-content-subheader">
-                        <h2><hr>Health and safety at work act (1974):<hr></h2>
+                        <h2 id="Act1974"><hr>Health and safety at work act (1974):<hr></h2>
                     </div>
 
                 <h3>
@@ -156,7 +156,7 @@
 
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Control of substances hazardous to health (COSHH) regulation:<hr></h2>
+                    <h2 id="COSHH"><hr>Control of substances hazardous to health (COSHH) regulation:<hr></h2>
                 </div>
 
             <h3>
