--- a/notes/notes_topics/notes_pages/maths_arithmetic.html
+++ b/notes/notes_topics/notes_pages/maths_arithmetic.html
@@ -135,7 +135,7 @@
                 </table>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Number, percentages, and percentiles<hr></h2>
+                    <h2 id="Number"><hr>Number, percentages, and percentiles<hr></h2>
                 </div>
                 <h3><b>Question 1)</b></h3>
                 <p>A cement manufacturer is to provide concrete for a new high speed railway within the UK.</p>
