--- a/notes/notes_topics/notes_pages/maths_coordinates_and_geometry.html
+++ b/notes/notes_topics/notes_pages/maths_coordinates_and_geometry.html
@@ -136,7 +136,7 @@
 
                 
                 <div class="notes-content-subheader">
-                    <h2><hr>Coordinates and Geometry<hr></h2>
+                    <h2 id="CoordsAndGeometry"><hr>Coordinates and Geometry<hr></h2>
                 </div>
                 <h3><b>Question 1)</b></h3>
                 <p>The table shows the coordinates for some sheet metal. Calculate the area of the sheet metal..</p>
