--- a/notes/notes_topics/notes_pages/maths_graphs_and_charts.html
+++ b/notes/notes_topics/notes_pages/maths_graphs_and_charts.html
@@ -136,7 +136,7 @@
 
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Graphs and Charts<hr></h2>
+                    <h2 id="GraphsAndCharts"><hr>Graphs and Charts<hr></h2>
                 </div>
                 <h3><b>Question 1)</b></h3>
                 <p>The table shows the test scores for a class. Using a cumulative frequency curve estimate the number of scores greater than 65.</p>
