--- a/notes/notes_topics/notes_pages/maths_ratios.html
+++ b/notes/notes_topics/notes_pages/maths_ratios.html
@@ -135,7 +135,7 @@
                 </table>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Ratio<hr></h2>
+                    <h2 id="Ratio"><hr>Ratio<hr></h2>
                 </div>
                 <h3><b>Question 1)</b></h3>
                 <p>A kayak manufactuer is using epoxy adhesive to bond the fibre glass layers together in the kayak design.</p>
