--- a/notes/notes_topics/notes_pages/maths_statistics.html
+++ b/notes/notes_topics/notes_pages/maths_statistics.html
@@ -136,7 +136,7 @@
 
                 
                 <div class="notes-content-subheader">
-                    <h2><hr>Statistics<hr></h2>
+                    <h2 id="Stats"><hr>Statistics<hr></h2>
                 </div>
                 <h3><b>Question 1)</b></h3>
                 <p>A student is cutting out a piece of wood for his design project. To do this his needs to use the bandsaw. The probability that the bandsaw is free is 0.65. The probability that the PPE he needs for bandsaw is free is 0.35. Calculate the probability that he can undertake his work.</p>
