--- a/notes/notes_topics/notes_pages/maths_surface_area_and_volume.html
+++ b/notes/notes_topics/notes_pages/maths_surface_area_and_volume.html
@@ -135,7 +135,7 @@
                 </table>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Surface area/Volume<hr></h2>
+                    <h2 id="SAandV"><hr>Surface area/Volume<hr></h2>
                 </div>
                 <h3><b>Question 1)</b></h3>
                 <p>The figure shows some sheet metal to be cut for a car door. The volume of the sheet metal is 900,000mm<sup>3</sup>. Calculate the thickness of the sheet metal. All measurements are in mm.</p>
