--- a/notes/notes_topics/notes_pages/maths_trigonometry.html
+++ b/notes/notes_topics/notes_pages/maths_trigonometry.html
@@ -135,7 +135,7 @@
                 </table>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Trigonometry<hr></h2>
+                    <h2 id="Trigonometry"><hr>Trigonometry<hr></h2>
                 </div>
                 <h3><b>Question 1)</b></h3>
                 <p>The figure shows a design for a footbridge. Calculate the length of the column. All measurements are in mm.</p>
