--- a/notes/notes_topics/notes_pages/modelling_the_costing_of_projects_notes.html
+++ b/notes/notes_topics/notes_pages/modelling_the_costing_of_projects_notes.html
@@ -88,7 +88,7 @@
                 <div class="notes-content-intro">
                 </div>
 
-                <h3><b><u>Budgets:</b></u></h3>
+                <h3 id="Budgets"><b><u>Budgets:</b></u></h3>
                 <h3><ul>
                         <li>Creating a plan to spend your money</li>
                         <li>Financial forecasts are future predictions of your business 
@@ -109,7 +109,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Planning for production:</b></u></h3>
+                    <h3 id="PlanningForProduction"><b><u>Planning for production:</b></u></h3>
                     <h3>Allocation of:</h3>
                     <h3><ul>
                         <li>Employees</li>
@@ -127,7 +127,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Selection of tools, machines and manufacturing processes:</b></u></h3>
+                    <h3 id="SelectionOfToolsMachinesAndManufacturingProcesses"><b><u>Selection of tools, machines and manufacturing processes:</b></u></h3>
                 <h3><ul>
                         <li> Successful manufacture is influenced by many factors such as the 
                             material, costs, product function and scale of production</li>
