--- a/notes/notes_topics/notes_pages/project_management_notes.html
+++ b/notes/notes_topics/notes_pages/project_management_notes.html
@@ -97,7 +97,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Critical path analysis:</b></u></h3>
+                <h3 id="CPA"><b><u>Critical path analysis:</b></u></h3>
                 <h3><p>The <b>mathematical network</b> analysis technique of planning complex working procedures with refernece to the critical path of each <b>alternative system</b></p>
                     
                     <ul>
@@ -120,7 +120,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Scrum:</b></u></h3>
+                    <h3 id="Scrum"><b><u>Scrum:</b></u></h3>
                     <h3><p>A design approach that revolves around teamwork. An emphasis on daily communication and the flexible reassessment of plans that are carried out in short, iterative phases of work.</p>
                         
                         <ul>
@@ -143,7 +143,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Six sigma:</b></u></h3>
+                    <h3 id="SixSigma"><b><u>Six sigma:</b></u></h3>
                     <h3><p>A business management system to:</p>                        
                         <ul>
                         <li>Reduce defects</li>
