--- a/notes/notes_topics/notes_pages/property_rights_notes.html
+++ b/notes/notes_topics/notes_pages/property_rights_notes.html
@@ -87,7 +87,7 @@
                 <div class="notes-content-intro">
                 </div>
 
-                <h3><b><u>Patents:</b></u></h3>
+                <h3 id="Patents"><b><u>Patents:</b></u></h3>
                 <h3><ul>
                         <li>Patentable inventions are New and Not obvious and solve a 
                             technical problem</li>
@@ -109,7 +109,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Copyrights:</b></u></h3>
+                    <h3 id="Copyright"><b><u>Copyrights:</b></u></h3>
                     <h3><ul>
                         <li>Copyright is a legal right that protects the use of your work once 
                             your idea has been physically expressed</li>
@@ -136,7 +136,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Design rights:</b></u></h3>
+                    <h3 id="Designrights"><b><u>Design rights:</b></u></h3>
                     <h3><ul>
                         <li>Design rights provide legal protection for designers to stop 
                             unauthorised copying for ten years</li>
@@ -164,7 +164,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Trademarks:</b></u></h3>
+                    <h3 id="Trademarks"><b><u>Trademarks:</b></u></h3>
                     <h3><ul>
                         <li>Trademarks give legal protection for brand identity and facilitate 
                             marketing</li>
