--- a/notes/notes_topics/notes_pages/sta_to_explore_notes.html
+++ b/notes/notes_topics/notes_pages/sta_to_explore_notes.html
@@ -97,7 +97,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>User centred design:</b></u></h3>
+                <h3 id="UserCentredDesign"><b><u>User centred design:</b></u></h3>
                 <h3><p>User centred design demands that designers employ a mixture of investigative (e.g. surveys and interviews) and generative (e.g. brainstorming) methods and tools to develop an <b>understanding of user needs</b></p>
                 <h3><p>Framework process</p>
                     <ul>
@@ -140,7 +140,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Circular economy:</b></u></h3>
+                    <h3 id="CircularEconomy"><b><u>Circular economy:</b></u></h3>
                     <h3><p>A circular economy is an alternative to traditional linear economy</p>
                         
                         <ul>
@@ -165,7 +165,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Systems thinking:</b></u></h3>
+                    <h3 id="SystemsThinking"><b><u>Systems thinking:</b></u></h3>
                     <h3><p>It's the way that keeps reducing inconsistencies between the actual flows of the <b>system</b>, and one's understanding of the <b>system</b> and its actual flows.</p>                        
                         <ul>
                         <li>Each part of the product or system is part of something bigger</li>
