--- a/notes/notes_topics/notes_pages/stages_of_a_products_life_cycle_notes.html
+++ b/notes/notes_topics/notes_pages/stages_of_a_products_life_cycle_notes.html
@@ -98,7 +98,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                <h3>Introduction:
+                <h3 id="Introduction">Introduction:
                     <ul>
                         <li>The product is launched with appropriate publicity following market research and sales start to take off (increase)</li>
                     </ul></h3>
@@ -107,7 +107,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                <h3>Evolution/growth:
+                <h3 id="Growth">Evolution/growth:
                     <ul>
                         <li>Advertising helps product sales to grow as consumers move to this product from previous ones</li>
                     </ul></h3>
@@ -117,7 +117,7 @@
                     </div>
 
 
-                <h3>Maturity:
+                <h3 id="Maturity">Maturity:
                     <ul>
                         <li>It is important to keep the product in this period of peak sales for as long as possible</li>
                     </ul></h3>
@@ -126,12 +126,12 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                <h3>Decline/removal:
+                <h3 id="Decline">Decline/removal:
                     <ul>
                         <li>Consumers who wish to buy will have done so and the product is eventually withdrawn</li>
                     </ul></h3>
 
-                <h3>Extensions/replacements:
+                <h3 id="Extensions">Extensions/replacements:
                     <ul>
                         <li>Updated, improved version is released to maintain sales</li>
                     </ul></h3>
