--- a/notes/notes_topics/notes_pages/standard_for_products_notes.html
+++ b/notes/notes_topics/notes_pages/standard_for_products_notes.html
@@ -87,7 +87,7 @@
                 <div class="notes-content-intro">
                 </div>
 
-                <h3><b><u>British standards (BSI and kite mark):</b></u></h3>
+                <h3 is="BSI"><b><u>British standards (BSI and kite mark):</b></u></h3>
                 <h3><ul>
                         <li>The BSI works with industry and government to produce a set of 
                             standards to assure consumers that products are well produced, 
@@ -103,7 +103,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>European (CEN and CE):</b></u></h3>
+                    <h3 id="CE"><b><u>European (CEN and CE):</b></u></h3>
                     <h3><ul>
                         <li> The European Community sets minimum standards of safety and 
                             manufacturing quality</li>
@@ -120,7 +120,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>International standards (ISO):</b></u></h3>
+                    <h3 id="ISO"><b><u>International standards (ISO):</b></u></h3>
                 <h3><ul>
                         <li>ISO is an independent, non-government international 
                             organization with a membership of 161 national standards bodies</li>
