--- a/notes/notes_topics/notes_pages/finishing_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/finishing_techniques_notes.html
@@ -454,6 +454,10 @@
 
                 <h3 id="HotFoilBlocking"><b><u>Hot foil blocking:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/hotfoilblocking.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>A foil sheet is place between the paper and the die</li>
