--- a/notes/notes_topics/notes_pages/finishing_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/finishing_techniques_notes.html
@@ -490,6 +490,10 @@
 
                 <h3 id="Embossing"><b><u>Embossing:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/embossing.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>The paper is placed between the two formers</li>
