--- a/notes/notes_topics/notes_pages/moulding_notes.html
+++ b/notes/notes_topics/notes_pages/moulding_notes.html
@@ -108,7 +108,8 @@
                         <li>Extruded into hollow tube (parison)</li>
                         <li>Tube is then clamped into metal mould</li>
                         <li>Air is pumped in to inflate mould</li>
-                        <li>Product is ejected</li></ol>
+                        <li>Mould/bottle is cooled to solidify plastic</li>
+                        <li>Product is ejected and trimmed</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
