--- a/notes/notes.html
+++ b/notes/notes.html
@@ -32,8 +32,8 @@
     </script>
 </head>
 
-<body>
-    <div class="containter">  
+<body style="background-color: rgb(255, 255, 255);">
+    <div class="containter" style="background-color: rgb(255, 255, 255);">  
         <header>
             <div class="Logo">
                 <img class="logo" src="../images/Logo.png"  alt="DesignandTechBase Logo">
@@ -79,12 +79,12 @@
             
 
         </header>
-        <div class="quote" margin-top>
+        <div class="quote" margin-top style="background-color: rgb(255, 255, 255);">
             <h2>Free handmade revision notes tailored for GCSE and A Level Design and Technology</h2>
         </div>
 
         <!-- Search bar section -->
-        <div class="search-container" style="background-color: whitesmoke;">
+        <div class="search-container" style="background-color: rgb(255, 255, 255);">
             <input type="text" id="searchInput" placeholder="Search for topics...">
             <button onclick="search()">Search</button>
         </div>
