--- a/notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
+++ b/notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
@@ -95,7 +95,7 @@
                         <img src="../../../images/notes_pages_images/mortisegauge.png" alt="Diagram of shape dimensions">
                     </div>
 
-                    <h3 id="OddLegCalipers"><b><u>Odd leg calipers:</b></u></h3>
+                    <h3 id="OddLegCalipers"><b><u>Odd leg callipers:</b></u></h3>
                 <h3><ul>
                         <li>Used to mark a line on an edge/step on a peice of metal</li>
                     </ul></h3>
@@ -103,12 +103,12 @@
                         <img src="../../../images/notes_pages_images/oddlegcaliper.png" alt="Diagram of shape dimensions">
                     </div>
 
-                    <h3 id="InternalCalipers"><b><u>Internal calipers:</b></u></h3>
+                    <h3 id="InternalCalipers"><b><u>Internal callipers:</b></u></h3>
                 <h3><ul>
                         <li>Used to measure the internal diameter of a tube/pole</li>
                     </ul></h3>
 
-                    <h3 id="ExternalCalipers"><b><u>External calipers:</b></u></h3>
+                    <h3 id="ExternalCalipers"><b><u>External callipers:</b></u></h3>
                 <h3><ul>
                         <li>Used to measure the outsude diameter of a tube/pole</li>
                     </ul></h3>
@@ -137,7 +137,7 @@
                         <img src="../../../images/notes_pages_images/micrometre.png" alt="Diagram of shape dimensions">
                     </div>
 
-                    <h3 id="VernierCalipers"><b><u>Vernier calipers:</b></u></h3>
+                    <h3 id="VernierCalipers"><b><u>Vernier callipers:</b></u></h3>
                 <h3><ul>
                         <li>Used to measure internal/external measurements very orecisely</li>
                     </ul></h3>
