Marking out done

--- a/exercises/exercise_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/exercises/exercise_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -153,14 +153,14 @@
                     </div>
                 </div>
 
-                <!-- <div class="portfolio-item-wrapper-notes">
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_marking_out.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_MarkingOutTechniques.pdf">Marking Out Techniques</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Marking_out_Q&A.pdf">Marking Out Techniques</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_moulding.jpg)"></div>
