All questions added

--- a/exercises/exercise_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/exercises/exercise_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -180,14 +180,14 @@
                     </div>
                 </div>
 
-                <!-- <div class="portfolio-item-wrapper-notes">
+                <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_marking_tools.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_SpecialistMarkingTools.pdf">Specialist Marking Tools</a>
+                            <a href="..\..\documents\Q&A\processes_techniques_special_tools_exercises\Specialist_marking_tools_Q&A.pdf">Specialist Marking Tools</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
 
 
