--- a/notes/notes_topics/notes_pages/marking_out_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/marking_out_techniques_notes.html
@@ -104,7 +104,7 @@
                 <h3><ul>
                         <li>Scriber (lines)</li>
                         <li>Engineer square (right-angles)</li>
-                        <li>Odd-leg caliper (lines on edges)</li>
+                        <li>Odd-leg calliper (lines on edges)</li>
                         <li>Dividers (circle)</li>
                         <li>Centre punch (centre of circle)</li>
                         <li>Template and sciber (irregular shapes)</li>
@@ -117,7 +117,7 @@
                 <h3><ul>
                         <li>Spirit pen (lines)</li>
                         <li>Engineer square (right-angles)</li>
-                        <li>Odd-leg calipers (lines on edges)</li>
+                        <li>Odd-leg callipers (lines on edges)</li>
                         <li>Dividers (circle)</li>
                         <li>Spirit pen (centre of circle)</li>
                         <li>Template and spirit pen (irregular shapes)</li>
