--- a/notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
+++ b/notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
@@ -87,7 +87,7 @@
                 <div class="notes-content-intro">
                 </div>
 
-                <h3 id="MortiseGauge"><b><u>Marking/Cutting/Mortise gauage:</b></u></h3>
+                <h3 id="MortiseGauge"><b><u>Marking/Cutting/Mortise gauge:</b></u></h3>
                 <h3><ul>
                         <li>Used to mark/dent a piece of timber parallel to the edge</li>
                     </ul></h3>
@@ -210,7 +210,7 @@
                         </tr>
                     </table>
 
-                    <h3 id="GoNoGoGauge"><b><u>Go-no-go gauage:</b></u></h3>
+                    <h3 id="GoNoGoGauge"><b><u>Go-no-go gauge:</b></u></h3>
                 <h3><ul>
                         <li>A go-no-go gauge is a tool used to check a piece of work is the correct size against its allowable tolerance</li>
                     </ul></h3>
