--- a/exercises/exercise_topics/InformationHandlingModellingAndForwardPlanning.html
+++ b/exercises/exercise_topics/InformationHandlingModellingAndForwardPlanning.html
@@ -85,7 +85,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/collectioncollation.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\Explore_create_and_evaluate_design_ideas_Q&A.pdf">Collection Collation and Analysis to Make Decisions</a>
+                            <a href="..\..\documents\Q&A\information_handling_planning_exercises\Explore_create_and_evaluate_design_ideas_Q&A.pdf">Collection Collation and Analysis to Make Decisions</a>
                         </div>
                     </div>
                 </div>
