--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
             <div class="provideindex">
 
                 <div class = "provideindex_text">
-                    <h3><br>High quality notes for GCSE and A level</h3>
+                    <h3><br>High quality <a href="notes/notes.html" style="color: rgb(185, 22, 22);">notes</a> for GCSE and A level</h3>
                 </div>
                 <img class="Notes_pic" src="images/note_pic.jpg" alt="A Notebook">
 
                 <div class = "provideindex_text">
-                    <h3><br>Abundance of free exercises</h3>
+                    <h3><br>Abundance of free <a href="exercises/exercises.html" style="color: rgb(185, 22, 22);">exercises</a></h3>
                 </div>
                 <img class="exercise_pic" src="images/exercise_pic.jpg" alt="Maths Questions">
 
                 <div class = "provideindex_text">
-                    <h3><br>Real coursework examples for you to follow</h3>
+                    <h3><br>Real <a href="coursework/coursework.html" style="color: rgb(185, 22, 22);">coursework</a> examples for you to follow</h3>
                 </div>
                 <img class="Coursework_pic" src="images/coursework_pic.jpg" alt="Coursework Examples">
 
