--- a/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
+++ b/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
@@ -113,7 +113,7 @@
 
                 <p>There are <b>two</b> key ways to measure papers & boards:
                     <li><b>Grams per square metre (GSM):</b> measures the <b>mass</b> of the paper/board</li>
-                    <li><b>Microns:</b> measures the <b>thickness</b> of paper/board (1 microns = 1mm)</li>
+                    <li><b>Microns:</b> measures the <b>thickness</b> of paper/board (1 micron = 1mm)</li>
                 </p>
 
                 <div class="notes-content-subheader">
