--- a/notes/notes_topics/notes_pages/modelling_the_costing_of_projects_notes.html
+++ b/notes/notes_topics/notes_pages/modelling_the_costing_of_projects_notes.html
@@ -88,23 +88,55 @@
                 <div class="notes-content-intro">
                 </div>
 
-                <h3 id="Budgets"><b><u>Budgets:</b></u></h3>
+                <h2 id="Budgets"><b>Budgets:</b></h2>
+
+                <h3><b><u>Costs:</b></u></h3>
                 <h3><ul>
-                        <li>Creating a plan to spend your money</li>
-                        <li>Financial forecasts are future predictions of your business 
-                            finances</li>
-                        <li>Regular forecasts help you manage your finances</li>
-                        <li>E.g. Start-up costs (insurance/stock), sales (quantity), expenses 
-                            (operational cost), cost of goods sold 
-                            (parts/packaging/transport), cash flow (Money being made)</li>
-                        <li>Start-up cots (legal/insurance/stock/advertising/permits/wages)</li>
-                        <li>Sales (predict sales)</li>
-                        <li>Expenses (wages/advertising/vehicles/accounting/legal fees)</li>
-                        <li>Cost of goods (COGS) 
-                            (materials/packaging/transport/commission)</li>
-                        <li>Cash flow (tell you how much cash your expecting/help make 
-                            decisions)</li>
-                    </ul></h3>
+                    <li>Set-up costs</li>
+                    <li>Material costs</li>
+                    <li>Labour costs</li>
+                    <li>Transportation costs</li>
+                    <li>Manufacturing costs</li>
+                    <li>Overhead costs / facilities costs</li>
+                    <li>Storage costs</li>
+                    <li>Packaging costs</li>
+                    <li>Energy costs</li>
+                    <li>Inflation impacting on costs</li>
+                    <li>Contingencies / allowance for unexpected events</li>
+                  </ul>
+
+
+                <h3><b><u>Market and Sales:</b></u></h3>
+                <h3><ul>
+                    <li>Sales and marketing costs / market research</li>
+                    <li>Production capacity</li>
+                    <li>Market trends</li>
+                    <li>Break even output</li>
+                    <li>Product retail price / affordability</li>
+                    <li>Market demand / expected production output</li>
+                  </ul>
+
+                <h3><b><u>Financial Planning and Analysis:</b></u></h3>
+                <h3><ul>
+                    <li>Profit forecasts and requirements</li>
+                  </ul>
+
+                <h3><b><u>External Factors</b></u></h3>
+                <h3><ul>
+                    <li>Government policies</li>
+                  </ul>
+
+                <h3><b><u>Strategic Planning</b></u></h3>
+                <h3><ul>
+                    <li>Long term aims and objectives</li>
+                  </ul>
+
+                <h3><b><u>Development and Human Resources</b></u></h3>
+                <h3><ul>
+                    <li>Training and development costs</li>
+                    <li>Quality</li>
+                  </ul></h3>
+
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
                     </div>
