--- a/notes/notes_topics/notes_pages/moulding_notes.html
+++ b/notes/notes_topics/notes_pages/moulding_notes.html
@@ -224,9 +224,10 @@
                     <ul>
                         <ol><li>Plastic granules fed through hopper</li>
                             <li>Heated/melted along the Archimedes screw</li>
-                            <li>Plastic injected into the die</li>
+                            <li>Plastic forced into the die</li>
                             <li>The plastic is extruded 'pulled' throug the die and cooled</li>
-                            <li>Rollers pull plastic continuously</li></ol>
+                            <li>Rollers pull plastic continuously</li>
+                            <li>The extruded product is cut to the desired lenghts</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
