--- a/notes/notes_topics/notes_pages/polymers_materials_notes.html
+++ b/notes/notes_topics/notes_pages/polymers_materials_notes.html
@@ -181,6 +181,8 @@
                             <ul>
                                 <li>Good alcohol and oil barrier</li>
                                 <li>Weather resistant</li>
+                                <li>Can be made transparent</li>
+                                <li>Inert/non-toxic</li>
                                 <li>Stiff/tough/hard</li> 
                                 <li>Available in a range of colours</li>                             
                                 
@@ -370,6 +372,8 @@
                         <td class="notes-table-data-pro">
                             <ul>
                                 <li>Waterproof</li>
+                                <li>Renewable</li>
+                                <li>Chemically resistant</li>
                                 <li>Elasticity</li>
                                 <li>Good electrical insulator</li>
                                 <li>Shock absorbent</li>
