--- a/notes/notes_topics/notes_pages/smart_materials_notes.html
+++ b/notes/notes_topics/notes_pages/smart_materials_notes.html
@@ -205,7 +205,7 @@
                 
 
                 <h3 id="PhotochromicMaterials"><b><u>Photo-chromic materials:</b></u></h3>
-                <li>change colours depending on light conditions</li><br><br/>
+                <li>change colours depending on light conditions (e.g. classes that also act as sunglasses)</li><br><br/>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
